--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- Navigation Bar -->
     <nav class="bg-blue-500 p-4 text-white">
         <div class="container mx-auto flex justify-between">
+            <img src="{{ url_for('static', filename='images/daily_logo.png') }}" height="50px" width="50px" alt="Daily Tallies Logo">
             <a href="{{ url_for('dashboard') }}" class="text-lg font-bold">Prompt Dashboard</a>
             <a href="{{ url_for('journal') }}" class="text-lg font-bold">Journal</a>
             <a href="{{ url_for('view_journal') }}" class="text-lg font-bold">History</a>
