--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Daily Tallies{% endblock %}</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body class="bg-gray-100 min-h-screen">
     <!-- Navigation Bar -->
-    <nav class="bg-blue-500 p-4 text-white">
+    <nav class="bg-blue-500 p-4 text-white shadow md" style="background-color: #D4EBED; color: #689689;">
         <div class="container mx-auto flex justify-between items-center">
-            <img src="{{ url_for('static', filename='images/daily_logo (2).png') }}" height="50px" width="50px" alt="Daily Tallies Logo">
+            <img src="{{ url_for('static', filename='images/daily_name.png') }}" class="h-14 w-25"  alt="Daily Tallies Logo">
             <div class="flex space-x-4"> <!-- Flex container for links -->
-                <a href="{{ url_for('dashboard') }}" class="text-lg font-bold hover:text-blue-300">Tasks</a>
-                <a href="{{ url_for('journal') }}" class="text-lg font-bold hover:text-blue-300">Journal</a>
-                <a href="{{ url_for('view_journal') }}" class="text-lg font-bold hover:text-blue-300">History</a>
-                <a href="{{ url_for('logout') }}" class="text-lg font-bold hover:text-blue-300">Logout</a>
+                <a href="{{ url_for('dashboard') }}" class="text-lg font-bold hover:text-white-300">tasks</a>
+                <a href="{{ url_for('journal') }}" class="text-lg font-bold hover:text-blue-300">journal</a>
+                <a href="{{ url_for('view_journal') }}" class="text-lg font-bold hover:text-blue-300">calendar</a>
+                <a href="{{ url_for('logout') }}" class="text-lg font-bold hover:text-blue-300">log-out</a>
             </div>
         </div>
     </nav>
