--- a/templates/view_journal.html
+++ b/templates/view_journal.html
@@ -2,7 +2,7 @@
 
 {% block title %}View Journal Entries{% endblock %}
 {% block content %}
-<div class="container mx-auto p-4">
+<div class="container mx-auto p-4 py-8">
     <!-- Calendar Navigation -->
     <div class="flex justify-between items-center mb-4">
         <a href="{{ url_for('view_journal', year=prev_year, month=prev_month) }}"
