--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
                                 </form>
                             </div>
                             <div class="flex-grow">
-                                <label for="prompt_{{ number }}" class="block text-sm font-medium text-gray-900 cursor-pointer">
+                                <label for="prompt_{{ number }}" class="text-sm font-medium text-gray-900 cursor-pointer">
                                     {{ prompt }}
                                 </label>
                             </div>
