--- a/templates/journal.html
+++ b/templates/journal.html
@@ -16,6 +16,6 @@
         {{entry_text}}</textarea>
         <div class="absolute inset-0 border-2 border-gray-300 rounded-lg pointer-events-none" style="z-index: -1;"></div>
     </div>
-    <button type="submit" class="bg-primary text-white px-6 py-2 rounded hover:bg-secondary block mx-auto">Save Entry</button>
+    <button type="submit" class="bg-primary text-white px-6 py-2 rounded custom-button block mx-auto">Save Entry</button>
 </form>
 {% endblock %}
