--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
                     <label class="block text-gray-700">Password:</label>
                     <input type="password" name="password" required class="w-full px-3 py-2 border rounded">
                 </div>
-                <button type="submit" class="w-full bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Login</button>
+                <button type="submit" class="w-full bg-blue-500 text-white px-4 py-2 rounded custom-button">Login</button>
             </form>
             <p class="mt-4 text-center">
                 <a href="{{ url_for('register') }}" class="text-blue-500 hover:text-blue-600">Need an account? Register here</a>
