--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,12 +16,12 @@
                 {% for number, prompt, response in prompts_and_responses %}
                     <div class="border rounded-lg p-4 hover:bg-gray-50 transition-colors flex items-center">
                         <div class="flex-shrink-0 mr-4">
-                            <form method="POST" action="{{ url_for('submit_response') }}" class="inline">
+                            <form method="POST" action="{{ url_for('submit_response') }}" class="inline custom-input">
                                 <input type="hidden" name="prompt_number" value="{{ number }}">
                                 <input type="hidden" name="response" value="{% if response %}{% else %}{{prompt}}{% endif %}">
                                 <input type="checkbox"
                                        id="prompt_{{ number }}"
-                                       class="strike-checkbox w-5 h-5 rounded border-gray-300 cursor-pointer"
+                                       class="strike-checkbox w-5 h-5 rounded border-gray-300 cursor-pointer custom-check"
                                        onchange="this.form.submit()"
                                        {% if response %}checked{% endif %}>
                             </form>
