--- a/templates/login.html
+++ b/templates/login.html
@@ -27,11 +27,11 @@
             <form method="POST" class="space-y-4">
                 <div>
                     <label class="block text-gray-700">Username:</label>
-                    <input type="text" name="username" required class="w-full px-3 py-2 border rounded">
+                    <input type="text" name="username" required class="w-full px-3 py-2 border rounded custom-input">
                 </div>
                 <div>
                     <label class="block text-gray-700">Password:</label>
-                    <input type="password" name="password" required class="w-full px-3 py-2 border rounded">
+                    <input type="password" name="password" required class="w-full px-3 py-2 border rounded custom-input">
                 </div>
                 <button type="submit" class="w-full bg-blue-500 text-white px-4 py-2 rounded custom-button">Login</button>
             </form>
